# ulcarchetype

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: bw25 adaptation.ipynb  define_test_cases.py  example ecoinvent activity.ipynb  example test case - improved implementation.ipynb  example using presamples.ipynb  examples of use.ipynb  import_iw.py
src/ulcarchetype/: ulcarchetype.py  utils.py
ulcarchetype/: to_erase.md  ulcarchetype.py  utils.py
